--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -1,3 +1,4 @@
+
 \begin{thebibliography}{99}
 
     \bibitem{Atkinson} Atkinson, K y Han, W. (2009). \textit{Theoretical Numerical Analysis: A Functional Analysis Framework}, 39. Springer New York, 3rd edition. Disponible en \url{https://doi.org/10.1007/978-1-4419-0458-4}.
@@ -12,7 +13,7 @@
 
     \bibitem{keenan-crane} Crane, K. (2005). Ray Tracing Quaternion Julia Sets on the GPU. \textit{University of Illinois at Urbana-Champaign}. Disponible en \url{https://www.cs.cmu.edu/~kmcrane/Projects/QuaternionJulia/paper.pdf}.
 
-    \bibitem{Hubbard-Douady} Douady, A. y Hubbard, J. (2009). \textit{Exploring the Mandelbrot set. The Orsay Notes}. Cornell University, Ithaca, NY. Disponible en \url{https://pi.math.cornell.edu/~hubbard/OrsayEnglish.pdf}\footnote{Esta última referencia es la traducción a inglés de las notas en francés de un curso dado entre 1983 y 1984, donde se presentan resultados publicados en las referencias [DH1] y [Do1] (1982).}.
+    \bibitem{Hubbard-Douady} Douady, A. y Hubbard, J. (2009). \textit{Exploring the Mandelbrot set. The Orsay Notes}. Cornell University, Ithaca, NY. Disponible en \url{https://pi.math.cornell.edu/~hubbard/OrsayEnglish.pdf}\footnote{Esta referencia es la traducción a inglés de las notas en francés de un curso dado entre 1983 y 1984, donde se presentan resultados publicados en las referencias [DH1] y [Do1] (1982).}.
 
     \bibitem{Dreher} Dreher, F. y Samuel, T. (2014). Continuous Images of Cantor’s Ternary Set. \textit{The American Mathematical Monthly}, 121(7):640--643. Disponible en \url{https://doi.org/10.4169/amer.math.monthly.121.07.640}.
 
