Preparo main para nuevo apéndice (#72)

--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -192,4 +192,9 @@
 
 \import{tex/apendices/}{javascript-doc.tex}
 
+\chapter{Instalación del producto software}
+\label{appendix:instalacion}
+
+\import{tex/apendices/}{instalacion.tex}
+
 \end{document}
