Añadido apéndice de instalación (#72)

--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -23,6 +23,11 @@
 \usepackage{booktabs}
 \usepackage[usenames, dvipsnames]{xcolor}
 \usepackage{listings}
+\lstset{basicstyle=\ttfamily,
+  showstringspaces=false,
+  commentstyle=\color{red},
+  keywordstyle=\color{blue}
+}
 \usepackage{hyperref}
 \usepackage{array}
 \usepackage{verbatim}
